BT: bluetooth wakelock fix from agrebren, courtesy of Dastin1015

--- a/drivers/tty/serial/Makefile
+++ b/drivers/tty/serial/Makefile
@@ -76,8 +76,10 @@ obj-$(CONFIG_SERIAL_ATMEL) += atmel_serial.o
 obj-$(CONFIG_SERIAL_UARTLITE) += uartlite.o
 obj-$(CONFIG_SERIAL_MSM) += msm_serial.o
 obj-$(CONFIG_SERIAL_MSM_HS) += msm_serial_hs.o
-obj-$(CONFIG_SERIAL_MSM_HS) += msm_serial_hs_brcm.o
+ifeq ($(CONFIG_MACH_RUBY),y)
 obj-$(CONFIG_SERIAL_MSM_HS) += msm_serial_hs_ti_dc.o
+endif
+obj-$(CONFIG_SERIAL_BCM_BT_LPM) += bcm_bt_lpm.o
 obj-$(CONFIG_SERIAL_MSM_HS_IMC) += msm_serial_hs_imc.o
 obj-$(CONFIG_SERIAL_MSM_HSL) += msm_serial_hs_lite.o
 obj-$(CONFIG_MSM_SERIAL_DEBUGGER) += msm_serial_debugger.o
