--- a/arch/arm/configs/shooter_defconfig
+++ b/arch/arm/configs/shooter_defconfig
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-butteredtoast-ics-RLS13.2"
+CONFIG_LOCALVERSION="-butteredtoast-ics-RLS13.6"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1527,7 +1527,7 @@ CONFIG_SERIAL_MSM_HS=y
 # CONFIG_SERIAL_MSM_HS_IMC is not set
 CONFIG_SERIAL_MSM_HSL=y
 CONFIG_SERIAL_MSM_HSL_CONSOLE=y
-# CONFIG_SERIAL_BCM_BT_LPM is not set
+CONFIG_SERIAL_BCM_BT_LPM=y
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
