--- a/arch/arm/configs/shooter_u_defconfig
+++ b/arch/arm/configs/shooter_u_defconfig
@@ -40,6 +40,8 @@ CONFIG_LOCALVERSION="-butteredtoast-ics-RLS16.1"
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
+# CONFIG_HAVE_KERNEL_XZ is not set
+# CONFIG_KERNEL_XZ is not set
 CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
