--- a/arch/arm/configs/shooter_u_defconfig
+++ b/arch/arm/configs/shooter_u_defconfig
@@ -35,12 +35,12 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-butteredtoast-ics-RLS16.1"
+CONFIG_LOCALVERSION="-butteredtoast-ics-RLS16"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
-# CONFIG_HAVE_KERNEL_XZ is not set
+CONFIG_HAVE_KERNEL_XZ=y
 # CONFIG_KERNEL_XZ is not set
 CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
@@ -675,7 +675,7 @@ CONFIG_LAGFREE_MAX_LOAD=50
 CONFIG_LAGFREE_MIN_LOAD=15
 CONFIG_LAGFREE_FREQ_STEP_DOWN=108000
 CONFIG_LAGFREE_FREQ_SLEEP_MAX=486000
-CONFIG_LAGFREE_FREQ_AWAKE_MIN=384000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=192000
 CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
 CONFIG_CPU_FREQ_GOV_SMARTASSV2=y
 CONFIG_SMARTASSV2_SLEEP_IDEAL_FREQ=768000
