--- a/arch/arm/configs/shooter_u_defconfig
+++ b/arch/arm/configs/shooter_u_defconfig
@@ -35,14 +35,14 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-butteredtoast-ics-RLS16"
+CONFIG_LOCALVERSION="-butteredtoast-ics-RLS15.2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
 CONFIG_HAVE_KERNEL_XZ=y
-# CONFIG_KERNEL_XZ is not set
-CONFIG_KERNEL_GZIP=y
+CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
@@ -417,11 +417,11 @@ CONFIG_MSM_MPDEC=y
 CONFIG_MSM_MPDEC_STARTDELAY=70000
 CONFIG_MSM_MPDEC_DELAY=500
 CONFIG_MSM_MPDEC_PAUSE=10000
-CONFIG_MSM_MPDEC_SCROFF_FREQ=486000
+CONFIG_MSM_MPDEC_SCROFF_FREQ=384000
 CONFIG_MSM_MPDEC_IDLE_FREQ=384000
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1350000
-CONFIG_MSM_CPU_FREQ_MIN=384000
+CONFIG_MSM_CPU_FREQ_MAX=1188000
+CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
